Fixing error: avatar was distorted on small devices

--- a/diego.zanon.io/css/custom.css
+++ b/diego.zanon.io/css/custom.css
@@ -70,6 +70,14 @@
 	font-size: 16px;
 }
 
+@media only screen and (max-width: 1000px) {
+
+	.profile-pic {
+		max-width: 180px;
+		max-height: 180px;
+	}
+}
+
 @media only screen and (max-width: 767px) {
 
 	.block-one, .block-two {
